--- a/CursoFM/DOM/index.html
+++ b/CursoFM/DOM/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="estilos.css" />
-		<script defer src="./obtenerElementos.js"></script>
+		<script defer src="./eliminarElementos.js"></script>
 		<title>Document Object Model</title>
 	</head>
 	<body>
@@ -20,9 +20,8 @@
 				<div class="caja">Caja 2</div>
 				<div class="caja">Caja 3</div>
 			</div>
-
-			<button id="boton1">Agregar Evento</button>
-			<button id="boton2">Eliminar Evento</button>
+			
+			<button onclick="eliminarCaja()"> Eliminar Caja </button>
 		</div>
 	</body>
 </html>
