Fiin del curso con sitio peliculas

--- a/CursoFM/DOM/index.html
+++ b/CursoFM/DOM/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="estilos.css" />
-		<script defer src="./eliminarElementos.js"></script>
+		<script defer src="./tiposdepropagacion.js"></script>
 		<title>Document Object Model</title>
 	</head>
 	<body>
@@ -21,7 +21,7 @@
 				<div class="caja">Caja 3</div>
 			</div>
 			
-			<button onclick="eliminarCaja()"> Eliminar Caja </button>
+			
 		</div>
 	</body>
 </html>
